# Rasterizer

./: PixelBuffer.cpp  PixelBuffer.h  main.cpp  meson.build  readme.md  renderer.cpp
src/: main.cpp  renderer.cpp  renderer.h
